--- a/src/app/main/home-screen/cards/cards.component.scss
+++ b/src/app/main/home-screen/cards/cards.component.scss
@@ -19,6 +19,7 @@
     width: 94.25px;
     height: 22px;
     transform: translateY(-10px);
+    text-align: center;
   }
   &__content {
     font-size: 10px;
