--- a/src/app/main/community-screen/add/add.page.scss
+++ b/src/app/main/community-screen/add/add.page.scss
@@ -1,16 +1,41 @@
-.container {
-  padding: 1.2rem;
-}
-ion-item {
-  font-size: 1.8rem;
-}
-
-.title {
-  font-size: 2.2rem;
-  color: #333;
-  font-weight: bold;
-  text-align: center;
-  margin: 1rem 0;
+.community__add {
+  &__main {
+    &__write-post {
+      display: flex;
+      margin-bottom: 2.4rem;
+    }
+    &__img {
+      width: 5rem;
+      height: 5rem;
+      object-fit: contain;
+      border-radius: 100%;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      margin-right: 1.4rem;
+      outline: 3px solid #3ec27d;
+      padding: 2px;
+    }
+    &__text-area {
+      padding: 1.6rem;
+      width: 100%;
+      border-radius: 15px;
+      color: #2e322f;
+      font-size: 1.4rem;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      border: 1px solid #e0e2e0;
+      &:focus {
+        outline: 1px solid #3ec27d;
+      }
+    }
+  }
+  &__img-post {
+    margin-bottom: 1.6rem;
+    &__img {
+      width: 18rem;
+      height: 11rem;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+  }
 }
 
 ion-button {
