--- a/src/app/main/farming-method-screen/card-item/card-item.component.html
+++ b/src/app/main/farming-method-screen/card-item/card-item.component.html
@@ -1,8 +1,8 @@
 <div class="card-item">
 
   <div class="card-item__first">
-    <img src="assets/img/jake.jpg" alt="">
-    <div class="card-item__first-name-details">
+    <img [src]="nameOfFarmer[farmingMethod.userId]?.imgUrl" alt="">
+    <div class=" card-item__first-name-details">
       <h3>
         {{nameOfFarmer[farmingMethod.userId]?.firstName.charAt(0).toUpperCase() + nameOfFarmer[farmingMethod.userId]?.firstName.slice(1) + ' ' + nameOfFarmer[farmingMethod.userId]?.lastName.charAt(0).toUpperCase() + nameOfFarmer[farmingMethod.userId]?.lastName.slice(1)}}
       </h3>
