--- a/src/app/main/farming-method-screen/card-item/card-item.component.scss
+++ b/src/app/main/farming-method-screen/card-item/card-item.component.scss
@@ -14,7 +14,7 @@
       width: 45px;
       height: 45px;
       border-radius: 100%;
-      object-fit: contain;
+      object-fit: cover;
       margin-right: 1rem;
     }
     &-name-details {
