--- a/src/app/main/farming-method-screen/details/details.page.scss
+++ b/src/app/main/farming-method-screen/details/details.page.scss
@@ -56,6 +56,14 @@
       display: flex;
       align-items: center;
       transform: translate(0.2rem, 0.6rem);
+
+      &--img {
+        width: 2rem;
+        height: 2rem;
+        border-radius: 100%;
+        object-fit: cover;
+        margin: 0 0.5rem;
+      }
       &--name {
         margin-right: 2rem;
         font-size: 1.2rem;
