--- a/src/app/main/home-screen/user-details/user-details.page.scss
+++ b/src/app/main/home-screen/user-details/user-details.page.scss
@@ -12,9 +12,9 @@
       width: 12rem;
       height: 12rem;
       border-radius: 100%;
-      margin-left: 3rem;
+      object-fit: cover;
       outline: 6px solid #c2bfbf;
-      padding: 1px;
+      padding: 4px;
     }
     &--text {
       width: 100%;
@@ -114,7 +114,6 @@
   align-items: center;
   color: #2e322f;
   margin-top: 1rem;
-
   border-radius: 15px;
   padding: 1.4rem;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -125,7 +124,7 @@
       width: 45px;
       height: 45px;
       border-radius: 100%;
-      object-fit: contain;
+      object-fit: cover;
       margin-right: 1rem;
     }
     &-name-details {
