--- a/src/app/main/home-screen/user-list/user-list.component.html
+++ b/src/app/main/home-screen/user-list/user-list.component.html
@@ -1,8 +1,6 @@
 <div class="user-list">
-  <img src="assets/img/jake.jpg" alt="" class="user-list__img"
-    [class.offline]="presence?.[user.userId]?.status ==='offline'"
+  <img [src]="user.imgUrl" alt="" class="user-list__img" [class.offline]="presence?.[user.userId]?.status ==='offline'"
     [class.online]="presence?.[user.userId]?.status ==='online'" />
-
   <!-- 11 letters only -->
   <h3 class="user-list__name">
     {{(user.firstName.charAt(0).toUpperCase() + user.firstName.slice(1) + " " + user.lastName.charAt(0).toUpperCase() + user.lastName.slice(1)).slice(0,9) }}...
