--- a/src/app/main/profile-screen/profile-screen.page.scss
+++ b/src/app/main/profile-screen/profile-screen.page.scss
@@ -16,6 +16,12 @@
     height: 12rem;
     background-color: #2e322f;
     border-radius: 100%;
+    &--avatar {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 100%;
+    }
   }
   &__account {
     margin-top: 5.2rem;
