--- a/src/app/main/profile-screen/my-methods/card-method/card-method.component.html
+++ b/src/app/main/profile-screen/my-methods/card-method/card-method.component.html
@@ -15,7 +15,7 @@
   <div class="method-list" *ngIf="methods">
     <div class="card-item" *ngFor="let method of methods">
       <div class="card-item__first">
-        <img src="assets/img/jake.jpg" alt="">
+        <img [src]="userImg" alt="">
         <div class="card-item__first-name-details">
           <h3>
             {{userName}}
