--- a/src/app/main/community-screen/community-screen.page.scss
+++ b/src/app/main/community-screen/community-screen.page.scss
@@ -52,7 +52,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     &--details {
       display: flex;
       align-items: center;
@@ -62,12 +62,19 @@
     }
     &--img {
       display: block;
-      width: 5rem;
-      height: 5rem;
+      width: 4rem;
+      height: 4rem;
       border-radius: 50%;
+      object-fit: cover;
+      box-shadow: rgb(60 64 67 / 30%) 0px 1px 2px 0px,
+        rgb(60 64 67 / 15%) 0px 1px 3px 1px;
     }
     &--dropdown-icon {
       font-size: 2rem;
+    }
+    &--name {
+      font-size: 1.2rem;
+      font-weight: 700;
     }
   }
   &__img {
@@ -78,6 +85,14 @@
   &__content {
     margin-bottom: 2rem;
     padding: 1rem;
+    &--message {
+      font-size: 1.2rem;
+      line-height: 1.4;
+      color: #2e322f;
+      font-weight: 200;
+      letter-spacing: 1.2px;
+      padding: 0.5rem;
+    }
   }
 }
 
