--- a/src/app/main/profile-screen/my-methods/card-method/card-method.component.scss
+++ b/src/app/main/profile-screen/my-methods/card-method/card-method.component.scss
@@ -74,7 +74,7 @@
       width: 26px;
       height: 26px;
       border-radius: 100%;
-      object-fit: contain;
+      object-fit: cover;
       margin-right: 1rem;
     }
     &-name-details {
