--- a/src/app/main/profile-screen/my-methods/my-methods.page.html
+++ b/src/app/main/profile-screen/my-methods/my-methods.page.html
@@ -6,15 +6,17 @@
     </div>
     <div class="my-methods__crops">
       <h3>Crops</h3>
-      <app-card-method *ngFor="let name of cropsName" [name]="name.charAt(0).toUpperCase() + name.slice(1)"
-        [icon]="setIcon(name)" [cardColor]="setColor('crops',cropsName.indexOf(name))"
-        [methods]="userFarmingMethod[name.toLowerCase()]" [userName]="userName" (click)="navigateMethodList(name)">
+      <app-card-method *ngFor="let name of cropsName" [userImg]="userImg"
+        [name]="name.charAt(0).toUpperCase() + name.slice(1)" [icon]="setIcon(name)"
+        [cardColor]="setColor('crops',cropsName.indexOf(name))" [methods]="userFarmingMethod[name.toLowerCase()]"
+        [userName]="userName" (click)="navigateMethodList(name)">
       </app-card-method>
 
     </div>
     <div class="my-methods__crops">
       <h3>Livestock</h3>
-      <app-card-method *ngFor="let name of livestockName" [name]="name.charAt(0).toUpperCase() + name.slice(1)"
+      <app-card-method *ngFor="let name of livestockName" [userImg]="userImg"
+        [name]="name.charAt(0).toUpperCase() + name.slice(1)"
         [cardColor]="setColor('livestock',livestockName.indexOf(name))" [icon]="setIcon(name)"
         (click)="navigateMethodList(name)">
       </app-card-method>
