--- a/src/app/main/community-screen/community-screen.page.scss
+++ b/src/app/main/community-screen/community-screen.page.scss
@@ -108,9 +108,12 @@
       font-weight: 700;
     }
   }
-  &__img {
+  &__images {
     width: 100%;
-    height: 20rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+  }
+  &__img {
     object-fit: cover;
   }
   &__content {
