Favorites add method is working!

--- a/src/app/main/farming-method-screen/details/details.page.html
+++ b/src/app/main/farming-method-screen/details/details.page.html
@@ -28,11 +28,18 @@
           <div class="farming-method-details__heading">
             <h1 class="farming-method-details__heading--title">{{farmingMethod.name}} Farming Methods</h1>
             <div class="farming-method-details__heading--details">
-              <span>By</span>
-              <img class="farming-method-details__heading--details--img"
-                [src]="nameOfFarmer[farmingMethod.userId]?.imgUrl" alt="">
-              <span class="farming-method-details__heading--details--name">
-                {{nameOfFarmer[farmingMethod.userId]?.firstName.charAt(0).toUpperCase()+ nameOfFarmer[farmingMethod.userId]?.firstName.slice(1) + ' ' + nameOfFarmer[farmingMethod.userId]?.lastName.charAt(0).toUpperCase() + nameOfFarmer[farmingMethod.userId]?.lastName.slice(1)}}</span>
+              <div class="farming-method-details__heading--details--userInfo">
+                <span>By</span>
+                <img class="farming-method-details__heading--details--img"
+                  [src]="nameOfFarmer[farmingMethod.userId]?.imgUrl" alt="">
+                <span class="farming-method-details__heading--details--name">
+                  {{nameOfFarmer[farmingMethod.userId]?.firstName.charAt(0).toUpperCase()+ nameOfFarmer[farmingMethod.userId]?.firstName.slice(1) + ' ' + nameOfFarmer[farmingMethod.userId]?.lastName.charAt(0).toUpperCase() + nameOfFarmer[farmingMethod.userId]?.lastName.slice(1)}}</span>
+              </div>
+              <div class="farming-method-details__heading--details--saveIcon" (click)="saveClickHandler()">
+                <ion-icon name="heart-outline" *ngIf="!isSaved"></ion-icon>
+                <ion-icon name="heart" *ngIf="isSaved"></ion-icon>
+
+              </div>
             </div>
           </div>
         </ion-col>
