--- a/src/app/main/farming-method-screen/details/details.page.scss
+++ b/src/app/main/farming-method-screen/details/details.page.scss
@@ -56,6 +56,19 @@
       display: flex;
       align-items: center;
       transform: translate(0.2rem, 0.6rem);
+      justify-content: space-between;
+      &--userInfo {
+        display: flex;
+        align-items: center;
+      }
+
+      &--saveIcon {
+        align-self: center;
+        font-size: 2rem;
+        justify-self: center;
+        color: #ff7a91;
+        transform: translateY(4px);
+      }
 
       &--img {
         width: 2rem;
