--- a/src/app/profile-setup/crops-or-livestock/crops-or-livestock.page.html
+++ b/src/app/profile-setup/crops-or-livestock/crops-or-livestock.page.html
@@ -1,4 +1,7 @@
 <ion-content class="ion-padding">
+  <div class="back-btn" (click)="backBtnHandler()">
+    <ion-icon class="back-btn--icon" name="arrow-back-outline"></ion-icon>
+  </div>
   <div class="crops-or-livestock">
     <div class="crops-or-livestock__choices">
       <div class="crops-or-livestock__choices--crops" (click)="cropsHandlerClick()"
