--- a/src/app/profile-setup/crops-or-livestock/select-crops/select-crops.page.html
+++ b/src/app/profile-setup/crops-or-livestock/select-crops/select-crops.page.html
@@ -1,4 +1,7 @@
 <ion-content class="ion-padding">
+  <div class="back-btn" (click)="backBtnHandler()">
+    <ion-icon class="back-btn--icon" name="arrow-back-outline"></ion-icon>
+  </div>
   <div class="select-crops">
     <h1>Select crops:</h1>
     <ul class="select-crops__items">
