user farming method saved is working

--- a/src/app/main/profile-screen/profile-screen.page.html
+++ b/src/app/main/profile-screen/profile-screen.page.html
@@ -38,7 +38,7 @@
               <span class="profile__account__items__item--name">My methods</span>
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </div>
-            <div class="profile__account__items__item">
+            <div class="profile__account__items__item" (click)="myFavorites()">
               <div class="profile__account__items__item--icon-container">
                 <ion-img src="assets/icon/favorites.webp" class="profile__account--icon"></ion-img>
               </div>
