--- a/src/app/profile-setup/crops-or-livestock/select-crops/select-crops.page.scss
+++ b/src/app/profile-setup/crops-or-livestock/select-crops/select-crops.page.scss
@@ -46,3 +46,23 @@
     backdrop-filter: blur(2px);
   }
 }
+
+.back-btn {
+  width: 48px;
+  height: 48px;
+  background-color: #fff;
+  border-radius: 100%;
+  position: relative;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  &:hover {
+    opacity: 0.8;
+  }
+  &--icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 23px;
+    color: #333;
+  }
+}
