--- a/src/app/main/profile-screen/my-favorites/my-favorites.page.html
+++ b/src/app/main/profile-screen/my-favorites/my-favorites.page.html
@@ -3,14 +3,13 @@
     <app-page-header title="My Favorites"></app-page-header>
 
     <div class="user-details__farming-methods">
-
       <div class="card-item" *ngFor="let farmingMethod of userFarmingMethodSaved" (click)="onClickFarmingMethodHandler(farmingMethod.farmingMethodId
             )">
         <div class="card-item__first">
-          <img [src]="user.imgUrl" alt="">
+          <img [src]="farmingMethodUserInfo[farmingMethod.farmingMethodId].imgUrl" alt="">
           <div class="card-item__first-name-details">
             <h3>
-              {{user.firstName.charAt(0).toUpperCase() + user.firstName.slice(1) + ' ' + user.lastName.charAt(0).toUpperCase() + user.lastName.slice(1) }}
+              {{farmingMethodUserInfo[farmingMethod.farmingMethodId].firstName.charAt(0).toUpperCase() + farmingMethodUserInfo[farmingMethod.farmingMethodId].firstName.slice(1) + ' ' + farmingMethodUserInfo[farmingMethod.farmingMethodId].lastName.charAt(0).toUpperCase() + farmingMethodUserInfo[farmingMethod.farmingMethodId].lastName.slice(1) }}
             </h3>
             <span>{{farmingMethod.date.toLocaleDateString("en-US") | date}}</span>
           </div>
