--- a/src/app/main/profile-screen/my-methods/method-list/method-list.page.html
+++ b/src/app/main/profile-screen/my-methods/method-list/method-list.page.html
@@ -1,11 +1,29 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>{{name}}</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-
+<ion-content class="ion-padding">
+  <app-page-header [title]='name'></app-page-header>
+  <div class="back-btn" (click)="backBtn()">
+    <ion-icon class="back-btn--icon" name="arrow-back-outline"></ion-icon>
+  </div>
+  <div class="method-list">
+    <div class="card-item" *ngFor="let farmingMethod of allSelectedMethod" (click)="onClickFarmingMethodHandler(farmingMethod.farmingMethodId
+  )">
+      <div class="card-item__first">
+        <img [src]="user.imgUrl" alt="">
+        <div class="card-item__first-name-details">
+          <h3>
+            {{user.firstName.charAt(0).toUpperCase() + user.firstName.slice(1) + ' ' + user.lastName.charAt(0).toUpperCase() + user.lastName.slice(1) }}
+          </h3>
+          <span>{{farmingMethod.date.toLocaleDateString("en-US") | date}}</span>
+        </div>
+      </div>
+      <div class="card-item__middle">
+        <p>{{farmingMethod.methods[0].title}}</p>
+      </div>
+      <div class="card-item__last">
+        <div class="card-item__last-name">{{farmingMethod.name}}
+        </div>
+        <div class="card-item__last-hectares">{{farmingMethod.hectares}} ha</div>
+      </div>
+    </div>
+  </div>
 
 </ion-content>
